<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Background gradient -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/graybkgd" />

    <!-- Full screen linear layout container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- App title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/unicorngiggles"
            android:gravity="center_horizontal"
            android:text="@string/app_title"
            android:textColor="@color/colorAccent"
            android:textSize="58sp" />

        <!-- App subtitle -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/neoteric"
            android:gravity="center_horizontal"
            android:text="@string/app_subtitle"
            android:textColor="@color/lightPink"
            android:textSize="24sp" />

        <!-- START Top score bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <!-- START relative layout for format score tag / game tag -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightGray"
                android:padding="4dp">

                <!-- START content of score tag / game tag -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/match_score_label"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/team_a_overall_score"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginRight="2dp"
                        android:text="@string/match_score_a"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginRight="2dp"
                        android:text="@string/match_score_separator"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/team_b_overall_score"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/match_score_b"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                </LinearLayout>

                <!-- Game number CardView container -->
                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    card_view:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginTop="4dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="4dp"
                            android:text="@string/game_number_label"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/game_number"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_marginTop="4dp"
                            android:paddingRight="8dp"
                            android:text="@string/game_number"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView><!-- END content of score tag / game tag -->

            </RelativeLayout> <!-- END relative layout for format score tag / game tag -->

        </LinearLayout> <!-- END top score bar -->


        <!-- START divided two player screen -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/cardview_light_background"
            android:paddingBottom="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/mdgrotesque"
                    android:gravity="center_horizontal"
                    android:text="@string/player_a_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/player_game_points_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/game_points_player_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mdgrotesque"
                    android:gravity="center_horizontal"
                    android:text="@string/player_a_points"
                    android:textColor="@color/colorPrimary"
                    android:textSize="42sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mdgrotesque"
                    android:onClick="addPointForPlayerA"
                    android:padding="12dp"
                    android:text="@string/player_point_button_label"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/mdgrotesque"
                    android:onClick="addNetHitForPlayerA"
                    android:padding="12dp"
                    android:text="@string/player_net_button_label"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/player_net_count_label"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/net_hits_player_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/player_a_net_hits"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/server_a"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    card_view:cardBackgroundColor="@color/lightGray"
                    card_view:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/server_player_a"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:text="@string/player_server_a_label"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/lightGray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/mdgrotesque"
                    android:gravity="center_horizontal"
                    android:text="@string/player_b_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/player_game_points_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/game_points_player_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mdgrotesque"
                    android:gravity="center_horizontal"
                    android:text="@string/player_b_points"
                    android:textColor="@color/colorPrimary"
                    android:textSize="42sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/mdgrotesque"
                    android:onClick="addPointForPlayerB"
                    android:padding="12dp"
                    android:text="@string/player_point_button_label"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/mdgrotesque"
                    android:onClick="addNetHitForPlayerB"
                    android:padding="12dp"
                    android:text="@string/player_net_button_label"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/player_net_count_label"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/net_hits_player_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:text="@string/player_b_net_hits"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                </LinearLayout>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/server_b"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    card_view:cardBackgroundColor="@color/lightGray"
                    card_view:cardCornerRadius="10dp">

                    <TextView
                        android:id="@+id/server_player_b"
                        android:layout_width="wrap_content"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:text="@string/player_server_b_label"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <!-- END divided two player screen -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:onClick="reset"
            android:padding="12dp"
            android:text="@string/reset_button_label"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

    </LinearLayout> <!-- END full screen linear layout -->

</RelativeLayout>